# k-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  feishu-integration-2026-02-23.md  litellm_config.yaml  mcp_servers.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0b202e26f7ae_initial_tables.py  5369e283731d_add_scheduled_tasks_and_executions.py  8a8ed330400f_add_output_status_to_task_executions.py
app/: config.py  main.py
app/api/: chat.py  deps.py  tasks.py
app/core/: chat.py  internal_tools.py  llm.py  memory.py  tools.py
app/db/: base.py  session.py
app/feishu/: client.py  handler.py  webhook.py  ws_listener.py
app/middleware/: error_handler.py  logging.py
app/models/: __init__.py  conversation.py  message.py  scheduled_task.py  task_execution.py  user.py
app/output/: base.py  feishu.py  router.py
app/scheduler/: engine.py  nl_parser.py  task_runner.py
app/schemas/: chat.py  task.py
docs/: ai-memory-multimodel-research-2026-02-23.md  ai-scheduled-tasks-research-2026-02-23.md  open-source-ai-assistant-landscape-2026-02-23.md  personal-assistant-design-2026-02-23.md  phase1-progress-2026-02-23.md  phase3-chat-task-management-2026-02-23.md  phase3-scheduled-tasks-2026-02-23.md  testing-and-deployment-2026-02-23.md
mcp_servers/: web_search.py
scripts/: seed.py
tests/: test_health.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  api.ts  types.ts
web/src/components/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  ModelSelector.tsx  Sidebar.tsx  TasksPanel.tsx
