[project]
name = "k-assistant"
version = "0.1.0"
description = "Personal AI assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.60.0",
    "sse-starlette>=2.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "mem0ai>=0.1.0",
    "psycopg[binary,pool]>=3.1.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "lark-oapi>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
